--- a/NotaAsistencia.Client/NotaAsistencia.Client.csproj
+++ b/NotaAsistencia.Client/NotaAsistencia.Client.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Dtos\EstudianteDtos.cs" />
+    <None Include="Models\DocenteEdit.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.14" PrivateAssets="all" />
   </ItemGroup>
